--- a/gallery.html
+++ b/gallery.html
@@ -1,56 +1,123 @@
-<!DOCTYPE html>
-
-<html lang="el">
-	<head>
-		<title>Steven Taveras Bio Page</title>
-		<meta charset="utf-8">
-            <meta name="veiwport" content="width=device-width, initial-scale=1">
-            <!--loads remote bootstraps and jquary-->
-            <link rel="stylesheet" 
-                  href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-            <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-            <link rel="stylesheet"
-                  href="css/steventaveras-site.css"
-                  type="text/css">
-	</head>
-	<body>
-        <div class="section">
-            <div class="nav">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img class="pull-left" class="logo"
-                                 src="images/StevenTaverasSiteLogo.gif"
-                                 alt="image of steven taveras logo"
-                                 title="steventaveras.com">
-                        </div>
-                        <div class="col-md-6">
-                            <ul class="nav nav-tabs" class="pull-right" style="font-color: white;">
-                                <li><a href="index.html">HOME</a></li>
-                                <li><a href="aboutme.html">ABOUT ME</a></li>
-                                <li><a href="contact.html">CONTACT</a></li>
-                            </ul>
-                        </div>
-                    </div><!--end of row-->
-                </div><!--end of container-->
-            </div><!--end of nav-->
-        </div><!--end of section-->
-            <h1 class="copyright" style="color: black;">UNDER CONSTRUCTION</h1>
-    <hr>
-        <ul>
-            <li><a href="https://www.facebook.com/steven.taveras1" target="_blank">
-                <img class="iconsize" src="images/facebook.jpg"</a></li>
-            <li><a href="https://www.youtube.com/channel/UCFVYSh4PC84c34Etdagmc1Q" target="_blank">
-                <img class="iconsize" src="images/youtube.jpg"</a></li>
-            <li><a href="https://www.instagram.com/thedreamsniper" target="_blank">
-                <img class="iconsize" src="images/instagram.jpg"</a></li>
-            <li><a href="https://plus.google.com/+StevenTaveras_dreamsniper" target="_blank">
-                <img class="iconsize" src="images/googleplus.jpg"</a></li>
-            <li><a href="https://twitter.com/TheDreamsniper" target="_blank">
-                <img class="iconsize" src="images/twitter.jpg"</a></li>
-            <li><a href="http://dreamsniper.deviantart.com" target="_blank">
-                <img class="iconsize" src="images/deviantart.jpg"</a></li>
-         </ul>
-	</body>
+<html>
+    <head><title>Image Gallery</title>
+        <link rel="stylesheet"
+            href="css/finals.css"
+            type="text/css">
+        <style>
+            .bodyDiv{
+                margin-top: 100px;
+                
+            }
+            .sitename{
+                float: right;
+                font-weight: bold;
+            }
+            .menu{
+                Margin-top: 10px;
+            }
+            #smallpic{
+                margin-bottom: 30px;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="bodyDiv">
+            <div id="header">
+                <nav class="fixedNav">
+                    <div class="menu">
+                        <a class="sitename">Dreamsniper Gallery</a>
+                            <ul class="naviBar">
+                                <li><a href="finalIndex.html">Home</a></li>
+                                <li><a href="blueEarth.com">Blue Earth</a></li>
+                                <li><a href="avaMontes.html">Ava Montes</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div><!--end of header-->
+            <div class="picture">
+                <figure>
+                    <a target="_blank"href="images/be1.jpg">
+                    <img class="galPic"
+                        src="images/be1small.jpg"
+                        alt="image of comic book"
+                        title="Blue Earth Issue 1">
+                    <h6><figcaption>image by Steven Taveras &#169 2015
+                        </figcaption></h6></a>
+              </figure>
+            </div>
+            <div class="picture">
+                <figure>
+                <a target="_blank" href="images/be2.jpg">
+                    <img class="galPic"
+                        src="images/be2small.jpg"
+                        alt="image of comic book"
+                        title="Blue Earth Issue 1">
+                        <h6><figcaption>image by Steven Taveras &#169 2015
+                            </figcaption></h6></a>
+                </figure>
+            </div>
+            <div class="picture">
+                <figure>
+                <a target="_blank" href="images/be3.jpg">
+                    <img class="galPic"
+                         src="images/be3small.jpg"
+                         alt="image of comic book"
+                         title="Blue Earth Issue 1">
+                    <h6><figcaption>image by Steven Taveras &#169 2015
+                        </figcaption></h6></a>
+            </div>
+            <div class="picture">
+                <figure>
+                <a target="_blank" href="images/be4.jpg">
+                    <img class="galPic"
+                        src="images/be4small.jpg"
+                        alt="image of comic book"
+                        title="Blue Earth Issue 1">
+                    <h6><figcaption>image by Steven Taveras &#169 2015
+                        </figcaption></h6></a>
+            </div>
+            <div class="picture">
+                <figure>
+                <a target="_blank" href="images/am1.jpg">
+                    <img class="galPic"
+                        src="images/am1small.jpg"
+                        alt="image of Ava Montes character"
+                        title="Ava Montes: The Golden Horns">
+                    <h6><figcaption>image by Steven Taveras &#169 2015
+                        </figcaption</h6></a>
+            </div>
+            <div class="picture">
+                <figure>
+                <a target="_blank" href="images/am2.jpg">
+                    <img class="galPic" id="smallpic"
+                        src="images/am2small.jpg"
+                        alt="image of Ava Montes character"
+                        title="Ava Montes: The Golden Horns">
+                    <h6><figcaption>image by Steven Taveras &#169 2015
+                        </figcaption></h6></a>
+            </div>
+            <div class="picture">
+                <figure>
+                <a target="_blank" href="images/am3.jpg">
+                    <img class="galPic"
+                         src="images/am3small.jpg"
+                         alt="image of Ava Montes character"
+                         title="Ava Montes: The Golden Horns">
+                    <h6><figcaption>image by Steven Taveras &#169 2015</figcaption></h6></a>
+            </div>
+            <div class="picture">
+                <figure>
+                <a target="_blank" href="images/am4.jpg">
+                    <img class="galPic"
+                         src="images/am4small.jpg"
+                         alt="image of Ava Montes character"
+                         title="Ava Montes: The Golden Horns">
+                    <h6><figcaption>image by Steven Taveras &#169 2015</figcaption></h6></a>
+            </div> 
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zKCpldYcDg8"                    frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div><!--end of bodyDiv-->
+    </body>                            
 </html>
