--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<head>	
 		<title>StevenTaveras.com</title>
-		<link rel="stylesheet" href="css/index.css" type="html/css">
+		<link rel="stylesheet" href="css/index.css" type="text/css">
 	</head>	
 
 	<body id="body">
@@ -22,7 +22,7 @@
 					<td><a href="photoshop.html">PHOTOSHOP</a></td>
 					<td><a href="html.html">HTML</a></td>
 					<td><a href="aboutme.html">BIOGRAPHY</a></td>
-					<td><a href="midterm.html">MIDTERM</a>
+					<td><a href="midterm/midterm.html">MIDTERM</a>
 					</tr>
 				</table>
 			</div>
@@ -42,7 +42,7 @@
 					<td><sup><a href="photoshop.html">| PHOTOSHOP |</a></sup></td>
 					<td><sup><a href="html.html">HTML |</a></sup></td>
 					<td><sup><a href="aboutme.html">BIOGRAPHY |</a></sup></td>
-					<td><sup><a href="midterm.html">MIDTERM |</a></sup></td>
+					<td><sup><a href="midterm/midterm.html">MIDTERM |</a></sup></td>
 				</tr>
 				
 			</table>
